Incomplete - task 2987702: Editing transferred, deleted reactions and EC numbers http://sourceforge.net/tracker/?group_id=94642&func=detail&atid=608560&aid=2987702